# Jobboard

./: README.md  docker-compose.yml
backend_company/: Dockerfile  README.md  db.sqlite3  pyproject.toml
backend_company/app1/: admin.py
backend_company/app1/forms/: companyForm.py  companyVacancyForm.py
backend_company/app1/migrations/: 0001_initial.py  0002_company_companyid_company_email_company_password_and_more.py  0003_alter_company_email_alter_company_password.py  0004_company_llc_number.py  0005_remove_company_llc_number_company_llc_number.py  0006_alter_company_llc_number.py  0007_remove_company_companyid_alter_company_id.py  0008_alter_company_llc_number.py  0009_alter_company_password.py  0010_companyvacancy.py  0011_alter_companyvacancy_company_id.py  0012_alter_companyvacancy_company_id.py  0013_companyvacancy_hired_user_id.py  0014_companyvacancy_work_format.py  0015_rename_llc_number_company_llc_number_and_more.py
backend_company/app1/models/: __init__.py  companyModel.py  companyVacancyModel.py
backend_company/app1/views/: __init__.py  companyVacancyViews.py  companyViews.py
backend_company/core/: settings.py  urls.py
backend_company/templates/company/: login.html  register.html  register_success.html
backend_users/: Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend_users/core/: models.py  settings.py  urls.py  views.py
backend_users/core/migrations/: 0001_initial.py
backend_users/core/templates/: about.html  base.html  home.html
backend_users/users_app/: admin.py  forms.py  models.py
frontend/: .env  (+6 more)
(+92 files in other folders)
