[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["Sofya <abdulkina.s328@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5"
django-cors-headers = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
